--- a/stable/sentry/templates/secrets.yaml
+++ b/stable/sentry/templates/secrets.yaml
@@ -16,3 +16,6 @@ data:
   {{ end }}
   smtp-password: {{ default "" .Values.email.password | b64enc | quote }}
   user-password: {{ randAlphaNum 16 | b64enc | quote }}
+  {{ if not .Values.postgresql.enabled }}
+  postgres-password: {{ .Values.postgresql.postgresPassword | b64enc | quote }} 
+  {{ end }}
