--- a/stable/sentry/templates/service.yaml
+++ b/stable/sentry/templates/service.yaml
@@ -7,6 +7,10 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+{{- if .Values.service.enableInternalLB }}
+  annotations:
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+{{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
