[stable/sonarqube] Documentation example update
This is just a tiny documentation update based on
some things I noticed during initial install of the chart.

* Updated README to accurately reflect `values.yaml` entries
* Added entry to README for `sonarProperties` value
* Added a commented example for including a custom
`sonarProperties` entry in `values.yaml`

--- a/stable/sonarqube/values.yaml
+++ b/stable/sonarqube/values.yaml
@@ -67,6 +67,13 @@ persistence:
 plugins:
   install: []
 
+# A custom sonar.properties file can be provided using a multiline YAML string.
+# For example:
+# sonarProperties: |
+#   sonar.forceAuthentication=true
+#   sonar.security.realm=LDAP
+#   ldap.url=ldaps://organization.com
+
 ## Configuration values for the postgresql dependency
 ## ref: https://github.com/kubernetes/charts/blob/master/stable/postgressql/README.md
 ##
