--- a/incubator/chartmuseum/Chart.yaml
+++ b/incubator/chartmuseum/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 description: Helm Chart Repository with support for Amazon S3 and Google Cloud Storage
 name: chartmuseum
-version: 0.4.0
+version: 0.3.2
 appVersion: 0.2.7
 home: https://github.com/chartmuseum/chartmuseum
 icon: https://raw.githubusercontent.com/chartmuseum/chartmuseum/master/logo.png
@@ -10,3 +10,4 @@ maintainers:
   email: chartmuseum@gmail.com
 - name: Cloud Posse
   email: hello@cloudposse.com
+deprecated: true
