--- a/stable/kube2iam/templates/daemonset.yaml
+++ b/stable/kube2iam/templates/daemonset.yaml
@@ -59,7 +59,19 @@ spec:
               value: {{ .Values.aws.region }}
           {{- end }}
           ports:
-            - containerPort: 8181
+            - containerPort: {{ .Values.host.port }}
+          {{- if .Values.livenessProbeEnabled }}
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: {{ .Values.host.port }}
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+            timeoutSeconds: 1
+          {{- end }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
         {{- if .Values.host.iptables }}
