--- a/stable/kube2iam/values.yaml
+++ b/stable/kube2iam/values.yaml
@@ -8,11 +8,14 @@ host:
   ip: $(HOST_IP)
   iptables: false
   interface: docker0
+  port: 8181
 
 image:
   repository: jtblin/kube2iam
   tag: 0.9.0
   pullPolicy: IfNotPresent
+
+livenessProbeEnabled: true
 
 # AWS Access keys to inject as environment variables
 aws:
