--- a/incubator/jaeger/templates/spark-cronjob.yaml
+++ b/incubator/jaeger/templates/spark-cronjob.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.spark.enabled -}}
+{{- if or .Capabilities.APIVersions.Has "batch/v1beta1" .Capabilities.APIVersions.Has "batch/v2alpha1" -}}
 apiVersion: {{ template "cronjob.apiVersion" $ }}
 kind: CronJob
 metadata:
@@ -73,4 +74,5 @@ spec:
             resources:
             {{ toYaml .Values.spark.resources | indent 10 }}
           restartPolicy: OnFailure
+{{- end -}}
 {{- end -}}
