Configure --app-port to remain consistent with Helm chart value of .host.port

--- a/stable/kube2iam/templates/daemonset.yaml
+++ b/stable/kube2iam/templates/daemonset.yaml
@@ -37,6 +37,7 @@ spec:
           {{- if .Values.verbose }}
             - --verbose
           {{- end }}
+            - --app-port={{ .Values.host.port }}
           env:
             - name: HOST_IP
               valueFrom:
