added fluentd custom config option

--- a/incubator/fluentd-elasticsearch/templates/configmap.yaml
+++ b/incubator/fluentd-elasticsearch/templates/configmap.yaml
@@ -416,3 +416,7 @@ data:
         overflow_action block
       </buffer>
     </match>
+
+{{ if .Values.fluentdcustomconfig }}
+  custom.conf: {{ toYaml .Values.fluentdcustomconfig | indent 2 }}
+{{ end }}
