disable fluentd custom config by default

--- a/incubator/fluentd-elasticsearch/values.yaml
+++ b/incubator/fluentd-elasticsearch/values.yaml
@@ -26,5 +26,5 @@ elasticsearch:
 rbac:
   create: true
 
-fluentdcustomconfig: |
-  # add fluentd custom configs here
+# fluentdcustomconfig: |
+#   # add fluentd custom configs here
