--- a/incubator/harbor/templates/clair/postgres-ss.yaml
+++ b/incubator/harbor/templates/clair/postgres-ss.yaml
@@ -4,7 +4,8 @@ kind: StatefulSet
 metadata:
   name: {{ template "harbor.fullname" . }}-clair-pg
   labels:
-    app: {{ template "harbor.fullname" . }}-clair-pg
+    app: {{ template "harbor.fullname" . }}
+    component: clair-pg
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -12,13 +13,15 @@ spec:
   serviceName: "{{ template "harbor.fullname" . }}-clair-pg"
   selector:
     matchLabels:
-      app: "{{ template "harbor.fullname" . }}-clair-pg"
+      app: "{{ template "harbor.fullname" . }}"
+      component: clair-pg
       release: "{{ .Release.Name }}"
   template:
     metadata:
       name: {{ template "harbor.fullname" . }}-clair-pg
       labels:
-        app: {{ template "harbor.fullname" . }}-clair-pg
+        app: {{ template "harbor.fullname" . }}
+        component: clair-pg
         chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
         release: "{{ .Release.Name }}"
         heritage: "{{ .Release.Service }}"
