--- a/incubator/harbor/templates/jobservice/jobservice-dpl.yaml
+++ b/incubator/harbor/templates/jobservice/jobservice-dpl.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   name: "{{ template "harbor.fullname" . }}-jobservice"
   labels:
-    app: "{{ template "harbor.fullname" . }}-jobservice"
+    app: "{{ template "harbor.fullname" . }}"
+    component: jobservice
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -12,7 +13,8 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ template "harbor.fullname" . }}-jobservice"
+        app: "{{ template "harbor.fullname" . }}"
+        component: jobservice
         chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
         release: "{{ .Release.Name }}"
         heritage: "{{ .Release.Service }}"
