--- a/incubator/harbor/templates/mysql/mysql-svc.yaml
+++ b/incubator/harbor/templates/mysql/mysql-svc.yaml
@@ -6,5 +6,6 @@ spec:
   ports:
     - port: 3306
   selector:
-    app: "{{ template "harbor.fullname" . }}-mysql"
+    app: "{{ template "harbor.fullname" . }}"
+    component: mysql
     release: {{ .Release.Name }}
