--- a/incubator/harbor/templates/clair/clair-svc.yaml
+++ b/incubator/harbor/templates/clair/clair-svc.yaml
@@ -2,31 +2,28 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: "{{ template "harbor.fullname" . }}-clair"
   name: "{{ template "harbor.fullname" . }}-clair"
 spec:
   ports:
     - port: 6060
   selector:
-    app: "{{ template "harbor.fullname" . }}-clair"
+    app: "{{ template "harbor.fullname" . }}"
+    component: adminserver
     release: {{ .Release.Name }}
 ---
 ---
 # clair host isn't configurable yet.  this creates a service
 # to get it working for now.
 # see https://github.com/vmware/harbor/issues/3250
-
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: "{{ template "harbor.fullname" . }}-clair"
   name: clair
 spec:
   ports:
     - port: 6060
   selector:
-    app: "{{ template "harbor.fullname" . }}-clair"
+    app: "{{ template "harbor.fullname" . }}"
+    component: adminserver
     release: {{ .Release.Name }}
 {{ end }}
