--- a/incubator/harbor/templates/registry/registry-svc.yaml
+++ b/incubator/harbor/templates/registry/registry-svc.yaml
@@ -6,5 +6,6 @@ spec:
   ports:
     - port: 5000
   selector:
-    app: "{{ template "harbor.fullname" . }}-registry"
+    app: "{{ template "harbor.fullname" . }}"
+    component: registry
     release: {{ .Release.Name }}
