--- a/incubator/zookeeper/values.yaml
+++ b/incubator/zookeeper/values.yaml
@@ -3,6 +3,8 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 servers: 3
+updateStrategy:
+  type: "OnDelete"
 # minAvailable: 2
 resources:
   requests:
