Simplifies kafka updateStrategy

--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -11,11 +11,7 @@ metadata:
 spec:
   serviceName: {{ template "kafka.fullname" . }}-headless
   updateStrategy:
-    type: {{ .Values.updateStrategy }}
-    {{ if and (eq .Values.updateStrategy "RollingUpdate") (hasKey .Values "rollingUpdatePartition") -}}
-    rollingUpdate:
-      partition: {{ .Values.rollingUpdatePartition }}
-    {{- end }}
+{{ toYaml .Values.updateStrategy | indent 4 }}
   replicas: {{ default 3 .Values.replicas }}
   template:
     metadata:
