Update cert-manager chart for charts/stable repository

--- a/stable/cert-manager/Chart.yaml
+++ b/stable/cert-manager/Chart.yaml
@@ -10,3 +10,6 @@ keywords:
   - tls
 sources:
   - https://github.com/jetstack/cert-manager
+maintainers:
+  - name: James Munnelly
+    email: james@jetstack.io
