clair should be disabled by default to match docs

--- a/incubator/harbor/values.yaml
+++ b/incubator/harbor/values.yaml
@@ -296,7 +296,7 @@ registry:
 ## Enabling it will just break things.
 #
 clair:
-  enabled: true
+  enabled: false
   postgresPassword: not-a-secure-password
 # resources:
 #  requests:
