--- a/incubator/harbor/templates/adminserver/adminserver-secrets.yaml
+++ b/incubator/harbor/templates/adminserver/adminserver-secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-adminserver"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 type: Opaque
 data:
   key: {{ .Values.adminserver.key | b64enc | quote }}
