--- a/incubator/harbor/templates/adminserver/adminserver-svc.yaml
+++ b/incubator/harbor/templates/adminserver/adminserver-svc.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "harbor.fullname" . }}-adminserver"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 spec:
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: "{{ template "harbor.fullname" . }}"
+{{ include "helm.matchLabels" . | indent 4 }}
     component: adminserver
-    release: {{ .Release.Name }}
