--- a/incubator/harbor/templates/clair/clair-cm.yaml
+++ b/incubator/harbor/templates/clair/clair-cm.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "harbor.fullname" . }}
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 data:
   config.yaml: |
     clair:
