--- a/incubator/harbor/templates/clair/clair-dpl.yaml
+++ b/incubator/harbor/templates/clair/clair-dpl.yaml
@@ -4,21 +4,15 @@ kind: Deployment
 metadata:
   name: {{ template "harbor.fullname" . }}-clair
   labels:
-    app: {{ template "harbor.fullname" . }}
+{{ include "helm.labels" . | indent 4 }}
     component: clair
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: {{ template "harbor.fullname" . }}
+{{ include "helm.labels" . | indent 8 }}
         component: clair
-        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-        release: "{{ .Release.Name }}"
-        heritage: "{{ .Release.Service }}"
     spec:
       containers:
       - name: clair
