--- a/incubator/harbor/templates/clair/clair-svc.yaml
+++ b/incubator/harbor/templates/clair/clair-svc.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "harbor.fullname" . }}-clair"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 spec:
   ports:
     - port: 6060
