--- a/incubator/harbor/templates/clair/postgres-secret.yaml
+++ b/incubator/harbor/templates/clair/postgres-secret.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "harbor.fullname" . }}-clair-pg-config
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 type: Opaque
 data:
   POSTGRES_PASSWORD: {{ .Values.clair.postgresPassword | b64enc | quote }}
