--- a/incubator/harbor/templates/ingress/secret.yaml
+++ b/incubator/harbor/templates/ingress/secret.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-ingress"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 type: kubernetes.io/tls
 data:
   tls.crt: {{ .Values.tlsCrt | b64enc | quote }}
