--- a/incubator/harbor/templates/jobservice/jobservice-secrets.yaml
+++ b/incubator/harbor/templates/jobservice/jobservice-secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-jobservice"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 type: Opaque
 data:
   JOBSERVICE_SECRET: {{ .Values.jobservice.secret | b64enc | quote }}
