--- a/incubator/harbor/templates/mysql/mysql-svc.yaml
+++ b/incubator/harbor/templates/mysql/mysql-svc.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "harbor.fullname" . }}-mysql"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 spec:
   ports:
     - port: 3306
   selector:
-    app: "{{ template "harbor.fullname" . }}"
+{{ include "helm.matchLabels" . | indent 4 }}
     component: mysql
-    release: {{ .Release.Name }}
