--- a/incubator/harbor/templates/registry/registry-cm.yaml
+++ b/incubator/harbor/templates/registry/registry-cm.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "{{ template "harbor.fullname" . }}-registry"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 data:
   config.yml: |+
     version: 0.1
