--- a/incubator/harbor/templates/registry/registry-secret.yaml
+++ b/incubator/harbor/templates/registry/registry-secret.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-registry"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 type: Opaque
 data:
   httpSecret: {{ .Values.registry.httpSecret | b64enc | quote }}
