--- a/incubator/harbor/templates/registry/registry-svc.yaml
+++ b/incubator/harbor/templates/registry/registry-svc.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "harbor.fullname" . }}-registry"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 spec:
   ports:
     - port: 5000
   selector:
-    app: "{{ template "harbor.fullname" . }}"
+{{ include "helm.matchLabels" . | indent 4 }}
     component: registry
-    release: {{ .Release.Name }}
