--- a/incubator/harbor/templates/ui/ui-secrets.yaml
+++ b/incubator/harbor/templates/ui/ui-secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.fullname" . }}-ui"
+  labels:
+{{ include "helm.labels" . | indent 4 }}
 type: Opaque
 data:
   secret: {{ .Values.ui.secret | b64enc | quote }}
