making rbac.service_account consistent across all files

--- a/incubator/kanister-operator/templates/deployment.yaml
+++ b/incubator/kanister-operator/templates/deployment.yaml
@@ -12,8 +12,8 @@ spec:
 {{ include "helm.labels" . | indent 8}}
     spec:
 {{- if .Values.rbac.serviceAccountName }}
-      serviceAccountName: {{ .Values.rbac.serviceAccountName }}
-{{- else if .Values.rbac.create }}      
+      serviceAccountName: {{ .Values.rbac.service_account }}
+{{- else if .Values.rbac.create }}
       serviceAccountName: {{ template "fullname" . }}-sa
 {{- end }}
       containers:
