--- a/incubator/kube-slack/Chart.yaml
+++ b/incubator/kube-slack/Chart.yaml
@@ -9,3 +9,6 @@ keywords:
 icon: https://upload.wikimedia.org/wikipedia/commons/1/1f/Echo_%28Notifications%29_logo.svg
 sources:
   - https://github.com/wongnai/kube-slack
+maintainers:
+  - name: jstriebel
+    email: jonathan@scalableminds.com
