Avoid IP infringement in default config
Even though the value isn't used, might as well not leave it in.

--- a/stable/spinnaker/templates/configmap/spinnaker-config.yaml
+++ b/stable/spinnaker/templates/configmap/spinnaker-config.yaml
@@ -195,7 +195,7 @@ data:
         },
         hipchat: {
           enabled: false,
-          botName: 'Skynet T-800'
+          botName: 'Spinnaker Bot'
         },
         sms: {
           enabled: false,
