--- a/stable/kube-lego/Chart.yaml
+++ b/stable/kube-lego/Chart.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 description: Automatically requests certificates from Let's Encrypt
 name: kube-lego
-version: 0.3.0
+version: 0.1.13
+# The kube-lego chart is deprecated and no longer maintained.
+deprecated: true
 keywords:
 - kube-lego
 - letsencrypt
 sources:
 - https://github.com/jetstack/kube-lego/tree/master/examples/nginx
-maintainers:
-  - name: jackzampolin
-    email: jack.zampolin@gmail.com
-  - name: mgoodness
-    email: mgoodness@gmail.com
 engine: gotpl
