add default image name

--- a/stable/grafana/templates/deployment.yaml
+++ b/stable/grafana/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
   {{- end }}
       containers:
         - name: {{ template "grafana.name" . }}
-          image: "{{ .Values.server.image }}"
+          image: "{{ default "grafana/grafana:4.6.3" .Values.server.image }}"
           imagePullPolicy: {{ default "Always" .Values.server.imagePullPolicy }}
           env:
             - name: GF_SECURITY_ADMIN_USER
