--- a/stable/anchore-engine/templates/core_deployment.yaml
+++ b/stable/anchore-engine/templates/core_deployment.yaml
@@ -47,6 +47,16 @@ spec:
           value: {{ .Values.postgresql.postgresDatabase }}
         - name: ANCHORE_DB_HOST
           value: {{ template "postgres.fullname" . }}
+        - name: ANCHORE_IO_USER
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "fullname" . }}
+              key: anchoreIOUser
+        - name: ANCHORE_IO_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "fullname" . }}
+              key: anchoreIOPassword
         - name: ANCHORE_DB_USER
           valueFrom:
             secretKeyRef:
