[stable/kube-lego] remove the required attribute for config.LEGO_EMAIL
this allows for the linter to pass. it's no longer so important now that this chart is deprecated

--- a/stable/kube-lego/values.yaml
+++ b/stable/kube-lego/values.yaml
@@ -5,7 +5,7 @@ config:
   ## Email address to use for registration with Let's Encrypt
   ##
   # LEGO_EMAIL: my@email.tld
-  LEGO_EMAIL: foo@example.com
+  LEGO_EMAIL:
 
   ## Let's Encrypt API endpoint
   ## Production: https://acme-v01.api.letsencrypt.org/directory
