--- a/stable/pachyderm/values.yaml
+++ b/stable/pachyderm/values.yaml
@@ -37,14 +37,16 @@ microsoft:
 ## Set default image settings, resource requests and number of replicas of pachd
 pachd:
  replicaCount: 1
+ ## Size of pachd's in-memory cache for PFS files. Size is specified in bytes, with allowed SI suffixes (M, K, G, Mi, Ki, Gi, etc).
+ pfsCache: 0G
  ## For available images please check: https://hub.docker.com/r/pachyderm/pachd/tags/
  image:
   repository: pachyderm/pachd
-  tag: 1.6.6
+  tag: 1.6.7
   pullPolicy: Always
  worker:
   repository: pachyderm/worker
-  tag: 1.6.6
+  tag: 1.6.7
  resources:
   ## For non-local deployments, 1 cpu and 2G of memory requests are recommended
   requests:
