--- a/incubator/harbor/templates/clair/clair-dpl.yaml
+++ b/incubator/harbor/templates/clair/clair-dpl.yaml
@@ -16,11 +16,11 @@ spec:
     spec:
       containers:
       - name: clair
-        image: vmware/clair:v2.0.1-photon
+        image: {{ .Values.clair.image.repository }}:{{ .Values.clair.image.tag }}
+        imagePullPolicy: {{ .Values.clair.image.pullPolicy }}
+        args: ["-insecure-tls", "-config", "/config/config.yaml"]
         resources:
 {{ toYaml .Values.clair.resources | indent 10 }}
-        args: ["-insecure-tls", "-config", "/config/config.yaml"]
-        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 6060
         volumeMounts:
