--- a/stable/grafana/values.yaml
+++ b/stable/grafana/values.yaml
@@ -187,7 +187,7 @@ server:
   ##
   # installPlugins:
 
-  # Set datasource in beginning
+  # Set datasource(s) in beginning
   setDatasource:
     ## If true, an initial Grafana Datasource will be set
     ## Default: false
@@ -209,48 +209,48 @@ server:
     ## Ref2: https://github.com/grafana/grafana/issues/1789
     ##
     datasource:
-      ## The datasource name.
-      ## Default: default
-      name: default
+        ## The datasource name.
+        ## Default: default
+      - name: default
 
-      ## Type of datasource
-      ## Default: prometheus
-      ##
-      type: prometheus
+        ## Type of datasource
+        ## Default: prometheus
+        ##
+        type: prometheus
 
-      ## The url of the datasource. To set correctly you need to know
-      ## the right datasource name and its port ahead. Check kubernetes
-      ## dashboard or describe the service should fulfill the requirements.
-      ## Synatx like `http://<release name>-<server name>:<port number>
-      ## Default: <empty>
-      ##
-      url:
+        ## The url of the datasource. To set correctly you need to know
+        ## the right datasource name and its port ahead. Check kubernetes
+        ## dashboard or describe the service should fulfill the requirements.
+        ## Syntax like `http://<release name>-<server name>:<port number>
+        ## Default: <empty>
+        ##
+        url:
 
-      ## The name of the database at the datasource.
-      ## Required parameter when used with elasticsearch, which refers to the index_name
-      ## Default: <empty>
-      database:
+        ## The name of the database at the datasource.
+        ## Required parameter when used with elasticsearch, which refers to the index_name
+        ## Default: <empty>
+        database:
 
-      ## Additional JSON data to be passed to the configuration of the datasource.
-      ## The JSON data is passed to curl, therefore it needs proper quoting and
-      ## escaping and needs to be on a single line. For example:
-      ##  '\"esVersion\": 2, \"interval\": \"Daily\", \"timeField\": \"@timestamp\"'
-      jsonData: null
+        ## Additional JSON data to be passed to the configuration of the datasource.
+        ## The JSON data is passed to curl, therefore it needs proper quoting and
+        ## escaping and needs to be on a single line. For example:
+        ##  '\"esVersion\": 2, \"interval\": \"Daily\", \"timeField\": \"@timestamp\"'
+        jsonData: null
 
-      ## Specify if Grafana has to go thru proxy to reach datasource
-      ## Default: proxy
-      ##
-      access: proxy
+        ## Specify if Grafana has to go thru proxy to reach datasource
+        ## Default: proxy
+        ##
+        access: proxy
 
-      ## Specify should Grafana use this datasource as default
-      ## Default: true
-      ##
-      isDefault: true
+        ## Specify should Grafana use this datasource as default
+        ## Default: true
+        ##
+        isDefault: true
 
-    ## Specify the job policy
-    ## Default: OnFailure
-    ##
-    restartPolicy: OnFailure
+        ## Specify the job policy
+        ## Default: OnFailure
+        ##
+        restartPolicy: OnFailure
 
 ## Grafana config file ConfigMap entry
 ##
