[incubator/patroni] makes secretKeyRefs configureable
Changeclass: minor - backward compatible

In order to enable other charts to provide their own credentials,
this commit exposes the secretKeyRefs configuration. So users are
allowed to provide their own secret resources and it gets easier
to use existing secrets (e.g. generated by an application chart).

This commit is non-disruptive to the userbase, as it defaults to
the current behaviour.

Bumps version to 0.6.0 as well.

--- a/incubator/patroni/templates/statefulset-patroni.yaml
+++ b/incubator/patroni/templates/statefulset-patroni.yaml
@@ -29,21 +29,9 @@ spec:
       - name: spilo
         image: "{{ .Values.Spilo.Image }}:{{ .Values.Spilo.Version }}"
         env:
-        - name: PGPASSWORD_SUPERUSER
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "patroni.fullname" . }}
-              key: password-superuser
-        - name: PGPASSWORD_ADMIN
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "patroni.fullname" . }}
-              key: password-admin
-        - name: PGPASSWORD_STANDBY
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "patroni.fullname" . }}
-              key: password-standby
+        {{- if .Values.SecretKeyRefs }}
+        {{- include "patroni.secretKeyRefs" . | indent 8 }}
+        {{- end }}
         {{if .Values.Etcd.Enable }}
         {{if .Values.Etcd.DeployChart }}
         - name: ETCD_DISCOVERY_DOMAIN
