--- a/incubator/istio/Chart.yaml
+++ b/incubator/istio/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 description: Istio Helm chart for Kubernetes
 name: istio
+deprecated: true
 # To avoid confusion the helm chart version stays in sync with the istio version - DO NOT UNSYNC -- ldemailly@google.com
 # https://github.com/kubernetes/charts/issues/1501
 version: 0.2.12-chart3
