Appends to advertised listeners, rather than replacing

--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -1,4 +1,5 @@
 {{- $configMapName := include "kafka.configmap" . -}}
+{{- $advertisedListenersOverride := first (pluck "advertised.listeners" .Values.configurationOverrides) }}
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
@@ -81,9 +82,7 @@ spec:
         - -c
         - |
           export KAFKA_BROKER_ID=${HOSTNAME##*-} && \
-          {{- if not (hasKey .Values.configurationOverrides "advertised.listeners") }}
-          export KAFKA_ADVERTISED_LISTENERS="PLAINTEXT://${POD_IP}:9092" && \
-          {{- end }}
+          export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_IP}:9092{{ if kindIs "string" $advertisedListenersOverride }}{{ printf ",%s" $advertisedListenersOverride }}{{ end }} && \
           /etc/confluent/docker/run
         volumeMounts:
         - name: datadir
