--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -59,8 +59,7 @@ affinity: {}
 ## ref: https://kafka.apache.org/documentation/#brokerconfigs
 ##
 configurationOverrides:
-  # "offsets.topic.replication.factor": 3
-  # "transaction.state.log.replication.factor": 1
+  "offsets.topic.replication.factor": 3
 
 # ------------------------------------------------------------------------------
 # Zookeeper:
