fix the namespaces permission

--- a/incubator/fluentd-cloudwatch/templates/clusterrole.yaml
+++ b/incubator/fluentd-cloudwatch/templates/clusterrole.yaml
@@ -10,6 +10,6 @@ metadata:
     heritage: "{{ .Release.Service }}"
 rules:
 - apiGroups: [""]
-  resources: ["fluentd-cloudwatch.namespaces", "pods"]
+  resources: ["namespaces", "pods"]
   verbs: ["get", "list", "watch"]
 {{- end }}
