Don't store postgresql user as a secret

--- a/stable/concourse/templates/secrets.yaml
+++ b/stable/concourse/templates/secrets.yaml
@@ -15,9 +15,7 @@ data:
   session-signing-key: {{ .Values.secrets.concourse.sessionSigningKey | b64enc | quote }}
   worker-key: {{ .Values.secrets.concourse.workerKey | b64enc | quote }}
   worker-key-pub: {{ .Values.secrets.concourse.workerKeyPub | b64enc | quote }}
-  {{ if .Values.postgresql.enabled }}
-  postgresql-user: {{ .Values.postgresql.postgresUser | b64enc | quote }}
-  {{ else }}
+  {{ if not .Values.postgresql.enabled }}
   postgresql-uri: {{ .Values.secrets.postgresql.uri | b64enc | quote }}
   {{ end }}
   {{- if .Values.concourse.encryption.enabled }}
