Enhance chart to follow best practices
seperated creating service account from enabling rbac.
see https://github.com/kubernetes/helm/blob/master/docs/chart_best_practices/rbac.md

--- a/stable/weave-scope/charts/weave-scope-agent/templates/daemonset.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/daemonset.yaml
@@ -65,7 +65,5 @@ spec:
       hostPID: true
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
-{{- if .Values.rbac.create }}
-      serviceAccountName: {{ .Values.rbac.serviceAccountName | default (include "toplevel.fullname" .) }}
-{{- end -}}
+      serviceAccountName: {{ template "weave-scope-agent.serviceAccountName" . }}
 {{- end -}}
