--- a/incubator/drone/templates/deployment-server.yaml
+++ b/incubator/drone/templates/deployment-server.yaml
@@ -30,6 +30,16 @@ spec:
               secretKeyRef:
                 name: {{ template "drone.fullname" . }}
                 key: secret
+          {{- range .Values.server.envSecret }}
+          {{- $secretName := .name -}}
+          {{- range $key, $value := .data }}
+          - name: {{ $key }}
+            valueFrom:
+              secretKeyRef:
+                name: {{ $secretName }}
+                key: {{ $value | lower | quote }}
+          {{- end }}
+          {{- end }}
           - name: DRONE_HOST
           {{- if hasKey .Values.server "host" }}
             value: {{ .Values.server.host }}
