--- a/incubator/mssql-linux/templates/service.yaml
+++ b/incubator/mssql-linux/templates/service.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - port: 1433
+      targetPort: 1433
       protocol: TCP
       name: {{ .Values.service.name }}
   selector:
